--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 # Dependencies
+# Root dependencies
 /node_modules
-package-lock.json
-package.json
+/package-lock.json
+/package.json
 
-# Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
+# Environment variables - root only
+/.env
+/.env.local
+/.env.development
+/.env.test
+/.env.production
 
 # Build directories
 /build
